; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_ok.c_action_ok_file_load_imageviewer.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_ok.c_action_ok_file_load_imageviewer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PATH_MAX_LENGTH = common dso_local global i32 0, align 4
@CORE_TYPE_IMAGEVIEWER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32, i64, i64)* @action_ok_file_load_imageviewer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @action_ok_file_load_imageviewer(i8* %0, i8* %1, i32 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  store i64 %4, i64* %10, align 8
  %15 = load i32, i32* @PATH_MAX_LENGTH, align 4
  %16 = zext i32 %15 to i64
  %17 = call i8* @llvm.stacksave()
  store i8* %17, i8** %11, align 8
  %18 = alloca i8, i64 %16, align 16
  store i64 %16, i64* %12, align 8
  store i8* null, i8** %13, align 8
  %19 = call i32* @menu_entries_get_menu_stack_ptr(i32 0)
  store i32* %19, i32** %14, align 8
  %20 = load i32*, i32** %14, align 8
  %21 = call i32 @file_list_get_last(i32* %20, i8** %13, i32* null, i32* null, i32* null)
  %22 = getelementptr inbounds i8, i8* %18, i64 0
  store i8 0, i8* %22, align 16
  %23 = load i8*, i8** %13, align 8
  %24 = call i32 @string_is_empty(i8* %23)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %31, label %26

26:                                               ; preds = %5
  %27 = load i8*, i8** %13, align 8
  %28 = load i8*, i8** %6, align 8
  %29 = trunc i64 %16 to i32
  %30 = call i32 @fill_pathname_join(i8* %18, i8* %27, i8* %28, i32 %29)
  br label %31

31:                                               ; preds = %26, %5
  %32 = load i32, i32* @CORE_TYPE_IMAGEVIEWER, align 4
  %33 = call i32 @default_action_ok_load_content_with_core_from_menu(i8* %18, i32 %32)
  %34 = load i8*, i8** %11, align 8
  call void @llvm.stackrestore(i8* %34)
  ret i32 %33
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32* @menu_entries_get_menu_stack_ptr(i32) #2

declare dso_local i32 @file_list_get_last(i32*, i8**, i32*, i32*, i32*) #2

declare dso_local i32 @string_is_empty(i8*) #2

declare dso_local i32 @fill_pathname_join(i8*, i8*, i8*, i32) #2

declare dso_local i32 @default_action_ok_load_content_with_core_from_menu(i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
